# pgparquet

./: .editorconfig  .gitignore  Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  security.yaml
src/: config.rs  main.rs  postgres_writer.rs  schema_mapper.rs
