[package]
authors = ["Jacob Hayes"]
categories = ["database", "command-line-utilities"]
description = "High-performance CLI tool for streaming Parquet files from Google Cloud Storage into PostgreSQL"
edition = "2024"
keywords = ["cli", "gcs", "parquet", "postgresql", "streaming"]
license = "MIT"
name = "pgparquet"
readme = "README.md"
repository = "https://github.com/JacobHayes/pgparquet"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
arrow = "56.0"
bytes = "1.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
hex = "0.4"
native-tls = "0.2"
object_store = { version = "0.12", features = ["gcp"] }
parquet = { version = "56.0", features = ["async"] }
postgres-native-tls = "0.5"
postgres-types = { version = "0.2", features = ["derive", "with-chrono-0_4"] }
tokio = { version = "1.47", features = ["full"] }
tokio-postgres = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
